update to new urls

--- a/confirmation.html
+++ b/confirmation.html
@@ -12,7 +12,7 @@
   <script>
     function backtomain(){
       setTimeout(function () {
-        window.location.replace("/Users/guillermo.abad/Documents/GitHub/Covid19_only_frontend/index.html");
+        window.location.replace("https://guillermoabadlopez.github.io/Covid19_only_frontend/index.html");
       }, 500);
     };
   </script>
