--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 } else{
                     createAppointment(name, age, phone, center, date);
                     setTimeout(function () {
-                        window.location.replace("/Users/guillermo.abad/Documents/GitHub/Covid19_only_frontend/confirmation.html");
+                        window.location.replace("https://guillermoabadlopez.github.io/Covid19_only_frontend/confirmation.html");
                     }, 1000);
                 }
                 render();
